--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "slick-and-clean-javascript",
+  "name": "presentasi-pratesis",
   "description": "Clean code concepts, tips and tricks on writing JavaScript - Sunday, 27 October 2019",
   "version": "1.0.0",
-  "repository": "git@github.com:grikomsn/slick-and-clean-javascript.git",
-  "author": "Griko Nibras <hello@griko.id>",
+  "repository": "https://github.com/asyrofist/presentasi.git",
+  "author": "Rakha Asyrofi <asyrofi@gdc.co.id>",
   "scripts": {
     "start": "mdx-deck deck.js",
     "build": "mdx-deck build deck.js",
